--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>I'm an undergraduate researcher in the Mobile Sensing Lab under Professor <a href="https://bayen.berkeley.edu/alex-bayen">Alexandre Bayen</a>. 
                 </p>
                 <p>
-                  I am interested in control theory and artifical intelligence for robotics. Recently, I have been focusing on using deep reinforcement learning for modeling human and AI driving agents. 
+                  I am interested in control theory and reinforcement learning for robotics. Recently, I have been focusing on using deep reinforcement learning for modeling human and AI driving agents. 
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:ashishpandian@berkeley.edu">Email</a> &nbsp;/&nbsp;
@@ -33,7 +33,7 @@
                   <a href="https://twitter.com/ashishpandian">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/ashish-pandian-515971185/">Linkedin</a> &nbsp;/&nbsp;
                   <!-- <a href="data/bio.txt">Bio</a> &nbsp;/&nbsp; -->
-                  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar(got to change this)</a>
+                  <a href="https://www.linkedin.com/in/ashish-pandian-515971185/">Scholar(got to change this)</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
@@ -54,10 +54,10 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
               <td style="padding:20px;width:10%;vertical-align:middle">
-                <video src="images/spawnnet_attn.mp4" autoplay muted inline loop width="200px">SpawnNet</video>
+                <video src="images/" autoplay muted inline loop width="200px">loop</video>
               </td>
               <td width="75%" valign="middle">
-                <a href="https://xingyu-lin.github.io/spawnnet/">
+                <a href="">
                   <papertitle>Optimal Control for Mixed Autonomy</papertitle>
                 </a>
                 <br>
