--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
               <td style="padding:20px;width:10%;vertical-align:middle">
-                <video src="images/" autoplay muted inline loop width="200px">loop</video>
+                <!-- <video src="" autoplay muted inline loop width="200px">loop</video> -->
               </td>
               <td width="75%" valign="middle">
                 <a href="">
