--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>I am a fourth year undergraduate student studying mathematics and computer science. I am conducting research in the Mobile Sensing Lab under Professor <a href="https://bayen.berkeley.edu/alex-bayen">Alexandre Bayen</a>. 
                 </p>
                 <p>
-                  I am interested in control theory and reinforcement learning for robotics. Currently, I have been focusing on using deep reinforcement learning for modeling human driving dynamics to develop autonomous driving agents that safely interact with people. 
+                  I am interested in control theory and reinforcement learning for robotics. Currently, I have been focusing on using deep reinforcement learning for modeling human driving dynamics to enable safe human-AI interaction. 
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:ashishpandian@berkeley.edu">Email</a> &nbsp;/&nbsp;
