--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Ashish Pandian
                 </p>
-                <p>I am a fourth year undergraduate student studying mathematics and computer science. I am conducting research in the Mobile Sensing Lab under Professor <a href="https://bayen.berkeley.edu/alex-bayen">Alexandre Bayen</a>. 
+                <p>I am a fourth year undergraduate student studying mathematics and computer science at <a href="https://www.berkeley.edu/">UC Berkeley</a>. I am conducting research in the Mobile Sensing Lab under Professor <a href="https://bayen.berkeley.edu/alex-bayen">Alexandre Bayen</a>. 
                 </p>
                 <p>
                   I am interested in control theory and reinforcement learning for robotics. Currently, I have been focusing on using deep reinforcement learning for modeling human driving dynamics to enable safe human-AI interaction. 
