--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   <a href="https://twitter.com/ashishpandian">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/ashish-pandian-515971185/">Linkedin</a> &nbsp;/&nbsp;
                   <!-- <a href="data/bio.txt">Bio</a> &nbsp;/&nbsp; -->
-                  <a href="https://www.linkedin.com/in/ashish-pandian-515971185/">Scholar(got to change this)</a>
+                  <a href="https://www.linkedin.com/in/ashish-pandian-515971185/">Scholar</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
@@ -61,10 +61,10 @@
                   <papertitle>Optimal Control for Mixed Autonomy</papertitle>
                 </a>
                 <br>
-                *, <strong>Ashish Pandian</strong>, Alexandre Bayen
+                Arwa Alanqary*, <strong>Ashish Pandian</strong>, Alexandre Bayen
                 <br>
                 <em>arXiv</em>, December 2023
-                <p>Working...</p>
+                <p>In review</p>
               </td>
             </tr>
   
