--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 Arwa Alanqary*, <strong>Ashish Pandian</strong>, Alexandre Bayen
                 <br>
                 <em>arXiv</em>, December 2023
-                <p>In review</p>
+                <p>To be submitted</p>
               </td>
             </tr>
   
