--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
                 <p class="name" style="text-align: center;">
                   Ashish Pandian
                 </p>
-                <p>I am a student studying mathematics and computer science at <a href="https://www.berkeley.edu/">UC Berkeley</a>. I am conducting research in the Mobile Sensing Lab under Professor <a href="https://bayen.berkeley.edu/alex-bayen">Alexandre Bayen</a>. 
-                </p>
+                <p>I am a graduate researcher at the Berkeley Artificial Intelligence Research (BAIR) Lab, where I have the privilege of being advised by Professor <a href="https://bayen.berkeley.edu/alex-bayen">Alexandre Bayen</a>. 
+                  I completed my Bachelor's degree in Mathematics and Computer Science at <a href="https://www.berkeley.edu/">UC Berkeley</a>. 
+                  During my undergraduate studies, I was actively involved with the <a href="https://www.berkeley.edu/">Berkeley Sports Analytics Club</a> and worked on building an autonomous race car with the <a href="https://bayen.berkeley.edu/alex-bayen">Formula Electric team</a>.
                 <p>
-                  I am interested in control theory and reinforcement learning for robotics. Currently, I have been focusing on using deep reinforcement learning for modeling human driving dynamics to enable safe human-AI interaction. 
+                  I am broadly interested in applying Reinforcement Learning, Control Theory, and Cooperative AI topics to robotics. 
+                  Currently, my research focuses on leveraging deep reinforcement learning to model human driving dynamics, aiming to enhance safe and effective human-AI interactions. 
+                  Feel free to send me an email at ashishpandian@berkeley.edu if you'd like to chat!
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:ashishpandian@berkeley.edu">Email</a> &nbsp;/&nbsp;
@@ -63,7 +66,7 @@
                 <br>
                 Arwa Alanqary*, <strong>Ashish Pandian</strong>, Alexandre Bayen
                 <br>
-                <em>arXiv</em>, December 2023
+                <em>arXiv</em>, 2024
                 <p>To be submitted</p>
               </td>
             </tr>
