--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 </p>
                 <p>I am a graduate researcher at the Berkeley Artificial Intelligence Research (BAIR) Lab, where I have the privilege of being advised by Professor <a href="https://bayen.berkeley.edu/alex-bayen">Alexandre Bayen</a>. 
                   I completed my Bachelor's degree in Mathematics and Computer Science at <a href="https://www.berkeley.edu/">UC Berkeley</a>. 
-                  During my undergraduate studies, I was actively involved with the <a href="https://www.berkeley.edu/">Berkeley Sports Analytics Club</a> and worked on building an autonomous race car with the <a href="https://bayen.berkeley.edu/alex-bayen">Formula Electric team</a>.
+                  During my undergraduate studies, I was actively involved with the <a href="https://sportsanalytics.berkeley.edu">Berkeley Sports Analytics Club</a> and building an autonomous race car with the <a href="https://ev.berkeley.edu">Formula Electric team</a>.
                 <p>
-                  I am broadly interested in applying Reinforcement Learning, Control Theory, and Cooperative AI topics to robotics. 
+                  I am keenly interested in applying Reinforcement Learning, Control Theory, and Cooperative AI to everyday robotics. 
                   Currently, my research focuses on leveraging deep reinforcement learning to model human driving dynamics, aiming to enhance safe and effective human-AI interactions. 
                   Feel free to send me an email at ashishpandian@berkeley.edu if you'd like to chat!
                 </p>
