--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>
                   I am keenly interested in applying Reinforcement Learning, Control Theory, and Cooperative AI to everyday robotics. 
                   Currently, my research focuses on leveraging deep reinforcement learning to model human driving dynamics, aiming to enhance safe and effective human-AI interactions. 
-                  Feel free to send me an email at ashishpandian@berkeley.edu if you'd like to chat!
+                  Feel free to send me an email if you'd like to chat!
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:ashishpandian@berkeley.edu">Email</a> &nbsp;/&nbsp;
