--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   I completed my Bachelor's degree in Mathematics and Computer Science at <a href="https://www.berkeley.edu/">UC Berkeley</a>. 
                   During my undergraduate studies, I was actively involved with the <a href="https://sportsanalytics.berkeley.edu">Berkeley Sports Analytics Club</a> and building an autonomous race car with the <a href="https://ev.berkeley.edu">Formula Electric team</a>.
                 <p>
-                  I am keenly interested in applying Reinforcement Learning, Control Theory, and Cooperative AI to everyday robotics. 
+                  I am keenly interested in Reinforcement Learning, Control Theory, and Cooperative AI, with a particular emphasis on their applications in everyday robotics. 
                   Currently, my research focuses on leveraging deep reinforcement learning to model human driving dynamics, aiming to enhance safe and effective human-AI interactions. 
                   Feel free to send me an email if you'd like to chat!
                 </p>
