--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 Arwa Alanqary*, <strong>Ashish Pandian</strong>, Alexandre Bayen
                 <br>
                 <em>arXiv</em>, 2024
-                <p>To be submitted</p>
+                <p>In submission</p>
               </td>
             </tr>
   
