added research papers

--- a/index.html
+++ b/index.html
@@ -60,14 +60,28 @@
                 <!-- <video src="" autoplay muted inline loop width="200px">loop</video> -->
               </td>
               <td width="75%" valign="middle">
+                <a href="https://arxiv.org/abs/2411.04976">
+                  <papertitle>Noisy Zero-Shot Coordination: Breaking The Common Knowledge Assumption In Zero-Shot Coordination Games</papertitle>
+                </a>
+                <br>
+                <strong>Ashish Pandian*</strong>, Usman Anwar*, Jia Wan, David Krueger, Jakob Foerster
+                <br>
+                2024
+                <p>We introduce Noisy Zero-Shot Coordination (NZSC), where agents train across noisy observations of coordination tasks, enabling robust collaboration with novel partners even without common knowledge of the environment.</p>
+              </td>
+            </tr>
+            <tr>
+              <td style="padding:20px;width:10%;vertical-align:middle">
+                <!-- <video src="" autoplay muted inline loop width="200px">loop</video> -->
+              </td>
+              <td width="75%" valign="middle">
                 <a href="">
-                  <papertitle>Optimal Control for Mixed Autonomy</papertitle>
+                  <papertitle>Optimal Control for Mixed Autonomy Traffic</papertitle>
                 </a>
                 <br>
                 Arwa Alanqary*, <strong>Ashish Pandian</strong>, Alexandre Bayen
                 <br>
-                <em>arXiv</em>, 2024
-                <p>In submission</p>
+                <em>In submission</em>, 2024
               </td>
             </tr>
   
