--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <a href="https://twitter.com/ashishpandian">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/ashish-pandian-515971185/">Linkedin</a> &nbsp;/&nbsp;
                   <!-- <a href="data/bio.txt">Bio</a> &nbsp;/&nbsp; -->
-                  <a href="https://www.linkedin.com/in/ashish-pandian-515971185/">Scholar</a>
+                  <a href="https://scholar.google.com/citations?user=k3n2QU8AAAAJ&hl">Scholar</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
@@ -58,6 +58,7 @@
             <tr>
               <td style="padding:20px;width:10%;vertical-align:middle">
                 <!-- <video src="" autoplay muted inline loop width="200px">loop</video> -->
+                <img src="images/NZSC.jpeg" width="200px" alt="Description of Image">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://arxiv.org/abs/2411.04976">
